examples/test/testpolicy15857.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15857
  namespace: namespace230
spec:
  podSelector:
    matchLabels:
      key19: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value33
          key24: value43
      podSelector:
        matchLabels:
          key0: value10
          key6: value47
